--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 
-    <title>CV</title>
+    <title>CV Maks</title>
 </head>
 
 <body class="body-bg">
